@@ -1,5 +1,9 @@
 This is the CHANGELOG for amavisd-milter.
 
+20070831:
+	Fixed bug when amavisd communication buffer is growing.
+	Thanks to: Michael Moeller <mmoeller@kimchukmail.com>
+
 20070729:
 	Better compatibility with Postfix: it does give information about
 	the queue-number only after the RCPT-TO-phase.
@@ -238,4 +242,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.44 2006/12/19 20:25:00 reho Exp $
+$Id: CHANGES,v 1.45 2007/07/29 11:41:08 reho Exp $
